--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -46,7 +46,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     Uncomment the <script> tag below when you're ready to add an interactive
     Google Map to your resume!
     -->
-    <!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
     <meta name="viewport" content="width=device-width">
 </head>
@@ -132,9 +132,14 @@ course.
         $("#projects").append(HTMLprojectStart);
         for (var data in projectVariable.projects){
             var myProject = projectVariable.projects[data];
-        var formattedHTMLprojectTitle = HTMLprojectTitle.replace("%data%", myProject.title);
-        console.log(formattedHTMLprojectTitle);
-        $(".project-entry").append(formattedHTMLprojectTitle);
+            var formattedHTMLprojectTitle = HTMLprojectTitle.replace("%data%", myProject.title);
+            $(".project-entry").append(formattedHTMLprojectTitle);
+            var formattedHTMLprojectDates = HTMLprojectDates.replace("%data%", myProject.dates);
+            $(".project-entry").append(formattedHTMLprojectDates);
+            var formattedHTMLprojectDescription = HTMLprojectDescription.replace("%data%", myProject.description);
+            $(".project-entry").append(formattedHTMLprojectDescription);
+//            var formattedHTMLprojectImage = HTMLprojectImage.replace("%data%", myProject.image);
+//            $(".project-entry").append(formattedHTMLprojectImage);
         }
     }
     projectVariable.display();
